# py-minimalegl

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  example.py  requirements.txt  setup.py
cpp/src/: CMakeLists.txt  main.cpp  minimalegl.cpp  minimalegl.h  pyminimalegl.cpp
py/minimalegl/: __init__.py
